--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest": [
+    "tests/manifest/js/jquery-1.11.1.js",
     "tests/manifest/js/a.js",
     "tests/manifest/js/b.js",
     "tests/manifest/js/c.js",
